# strawberry-examples

./: .pre-commit-config.yaml  pyproject.toml
django-subscriptions/: Makefile
django-subscriptions/api/: schema.py
