[tool.poetry]
name = "strawberry-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Django = "^4.0.6"
strawberry-graphql = "^0.119.1"
strawberry-graphql-django = "^0.4.0"
daphne = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
